Fixed wrapper overflow bug

--- a/assets/css/_layout.scss
+++ b/assets/css/_layout.scss
@@ -173,7 +173,6 @@ hr {
 
 .wrapper {
 	position: relative;
-	overflow: hidden;
 	background-color: white;
 }
 
